@@ -1,4 +1,5 @@
 HEAD
+	+ Added option to disable Peer Verification in EBox::RESTClient
 	+ pathHTTPSSSLCertificate() always returns a list
 	+ Added one more tip to component not found page
 	+ Removed duplicate code for page not found
